<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.fragments.SettingsFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBack"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_back"
        app:layout_constraintBottom_toBottomOf="@+id/txtTitle"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/settings"
        android:textSize="@dimen/message_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivBack"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtSelectTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/select_theme"
        android:textSize="@dimen/message_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <RadioGroup
        android:id="@+id/rgTheme"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSelectTheme">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbSystemDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/system_default"
            android:textSize="@dimen/message_text_size" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/light"
            android:textSize="@dimen/message_text_size" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rbDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dark"
            android:textSize="@dimen/message_text_size" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>