<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_root"
    android:padding="12dp"
    tools:context=".ui.fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtLocationName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/current_city"
            android:textSize="@dimen/title_text_size"
            app:layout_constraintEnd_toStartOf="@+id/addLocationIcon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtInfoSwipe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/pull_down_to_refresh"
            android:textSize="@dimen/message_text_size"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/addLocationIcon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtLocationName" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/settingIcon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_setting"
            app:layout_constraintBottom_toBottomOf="@+id/txtLocationName"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtLocationName" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/addLocationIcon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_location_add"
            app:layout_constraintBottom_toBottomOf="@+id/txtLocationName"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/settingIcon"
            app:layout_constraintTop_toTopOf="@+id/txtLocationName" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtInfoSwipe">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/layoutPermissionDenied"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/turn_on_location_permission"
                        android:textAlignment="center"
                        android:textSize="@dimen/info_text_size" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/location_permission_message"
                        android:textAlignment="center"
                        android:textSize="@dimen/message_text_size" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/settingsBtn"
                        style="@style/Button"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_margin="4dp"
                        android:minWidth="100dp"
                        android:text="@string/settings" />

                </LinearLayout>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cvLocationInfo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="10dp"
                    android:visibility="gone"
                    app:cardBackgroundColor="@color/transparent_semi"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:strokeWidth="0dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/ivInfo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:src="@drawable/ic_info"/>

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/txtInfoMessage"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/message_text_size"
                            android:layout_marginHorizontal="8dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/to_get_accurate"
                            android:lineHeight="22sp"
                            android:textColor="@color/white"
                            app:layout_constraintStart_toEndOf="@+id/ivInfo"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintBottom_toTopOf="@+id/divider"
                            tools:targetApi="p" />

                        <View
                            android:id="@+id/divider"
                            android:layout_width="1dp"
                            android:layout_height="20dp"
                            android:layout_margin="4dp"
                            android:background="@color/borderStrokeColor"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/txtCancelInfo"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:text="@string/cancel"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="@dimen/message_text_size"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="@+id/divider"
                            app:layout_constraintStart_toStartOf="parent" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/txtSettingsInfo"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:text="@string/settings"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="@dimen/message_text_size"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="@+id/divider" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

                <include
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/layoutWeatherInfo"
                    layout="@layout/layout_weather_info"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cvLocationInfo"
                     />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>